2722
That's what I get when I start Scala with explain types:
```scala
<console>:7: error: type arguments [?,Any] do not conform to class MyRelation's type parameter bounds [R <: Row,+Relation <: MyRelation[R,Relation]]
       val (x,y): (String, M) = (null, null)
           ^
Nothing <: ??
true
Nothing <: Any?
true
? <: $$iw.$$iw.Row?
true
Any <: $$iw.$$iw.MyRelation[?,Any]?
  <notype> <: $$iw.$$iw.MyRelation[?,Any]?
  false
false
Nothing <: _0?
  Nothing <: Nothing?
    type <: type?
      type = type?
      true
    true
  true
true
Nothing <: Any?
true
_0 <: $$iw.$$iw.Row?
  <notype> <: $$iw.$$iw.Row?
  false
  Any <: $$iw.$$iw.Row?
    <notype> <: $$iw.$$iw.Row?
    false
  false
false
Any <: $$iw.$$iw.MyRelation[_0,Any]?
  <notype> <: $$iw.$$iw.MyRelation[_0,Any]?
  false
false
<console>:7: error: type arguments [?,Any] do not conform to class MyRelation's type parameter bounds [R <: Row,+Relation <: MyRelation[R,Relation]]
       val (x,y): (String, M) = (null, null)
              ^
Nothing <: ??
true
Nothing <: Any?
true
? <: $$iw.$$iw.Row?
true
Any <: $$iw.$$iw.MyRelation[?,Any]?
  <notype> <: $$iw.$$iw.MyRelation[?,Any]?
  false
false
Nothing <: ??
true
Nothing <: Any?
true
? <: $$iw.$$iw.Row?
true
Any <: $$iw.$$iw.MyRelation[?,Any]?
  <notype> <: $$iw.$$iw.MyRelation[?,Any]?
  false
false
```
